packages/components/src/TitleBlockZen/TitleBlockZen.module.scss
/* ... */
.titleRowInner {
  @extend %titleBlockInner;
}

.rowBelowSeparatorInner {
  @extend %titleBlockInner;
}

.titleRowInnerContent {
  position: relative;
  display: flex;
  width: 100%;
  align-items: center;
  min-height: $ca-grid * 3.5;
  justify-content: space-between;
  border-bottom: $title-block-separator-height solid rgba($color-white-rgb, 0.1);

  .educationVariant & {
    border-bottom-color: rgba($color-purple-700-rgb, 0.2);
  }

  .adminVariant &,
  .collapseNavigationArea & {
    border-bottom-color: transparent;
  }

  @include title-block-medium-and-small {
    border-bottom: none;
  }
}

.title {
  display: flex;
  align-items: center;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing

  // Applying width 100% when the title is *not* long and is followed by a subtitle
  // causes misalignment of both.
  @include title-block-under-1366 {
    width: 100%;
  }
}

.titleAndSubtitle {
  display: flex;
  align-items: center;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing
  z-index: $ca-z-index-dropdown; // this ensures the page switcher dropdown sits over nav tabs

  .hasSubtitle & {
    @include title-block-under-1366 {
      transform: translateY(-0.3833em);
    }
  }

  transform: translateY(-0.0833em);
}

.titleAndSubtitleInner {
  display: flex;
  min-width: 0; // this is an important trick to prevent flexbox items from overflowing

  // TODO: removing .hasLongTitle here fixes the alignment on Performance story, but we should be able to not wrap subtitle.
  .hasSubtitle.hasLongTitle.hasLongSubtitle & {
    align-items: center;

    @include title-block-under-1366 {
      align-items: baseline;
    }
  }

  .hasPageSwitcherSelect & {
    @include title-block-medium-and-small {
      align-items: normal;
      flex-direction: column;
      justify-content: space-between;
      transform: translateY(calc(#{$ca-grid} / 3));
    }
  }

  .hasSubtitle & {
    align-items: baseline;
    overflow: hidden;

    @include title-block-under-1366 {
      align-items: normal;
      flex-direction: column;
      justify-content: space-between;
      transform: translateY(calc(#{$ca-grid} / 3));

      .hasLongTitle.hasLongSubtitle & {
        align-items: baseline;
      }
    }

    @include title-block-medium-and-small {
      transform: translateY(calc(#{$ca-grid} / 2));
    }
  }
}

.titleTextOverride.titleTextOverride {
  padding: 4px 0;

  @media (max-width: $breadcrumb-breakpoint-width) {
    font-family: $typography-heading-2-font-family;
    font-weight: $typography-heading-2-font-weight;
    font-size: $typography-heading-2-font-size;
    line-height: $typography-heading-2-line-height;
    letter-spacing: $typography-heading-2-letter-spacing;
  }

  @include title-block-under-1366 {
    font-family: $typography-heading-2-font-family;
    font-weight: $typography-heading-2-font-weight;
    font-size: $typography-heading-2-font-size;
    line-height: $typography-heading-2-line-height;
    letter-spacing: $typography-heading-2-letter-spacing;
    padding: 2px 0;
  }

  .hasLongTitle & {
    @include title-block-under-1366 {
      font-family: $typography-heading-3-font-family;
      font-weight: $typography-heading-3-font-weight;
      font-size: $typography-heading-3-font-size;
      line-height: $typography-heading-3-line-height;
      letter-spacing: $typography-heading-3-letter-spacing;
      padding: 2px 0;
    }
  }

  @include title-block-medium-and-small {
    font-family: $typography-heading-4-font-family;
    font-weight: $typography-heading-4-font-weight;
    font-size: $typography-heading-4-font-size;
    line-height: $typography-heading-4-line-height;
    letter-spacing: $typography-heading-4-letter-spacing;
    padding: 0;
  }
}

.avatar {
  display: none;
  box-sizing: border-box;
  overflow: hidden;
  height: $ca-grid * 2;
  width: $ca-grid * 2;

  @include ca-margin($end: calc(#{$ca-grid} / 2));

  > * {
    max-width: 100%;
  }

  @media (min-width: $layout-breakpoints-large) {
    display: block;
  }

  &.withBorder {
    border: 3px solid $color-white;
    border-radius: 50%;
  }

  .hasLongTitle & {
    display: none;
  }
}

.hamburger {
  display: none;

  @include ca-margin($end: $spacing-xs);

  @include title-block-medium-and-small {
    display: flex;
    align-items: center;
  }
}

.subtitle {
  display: flex;
  align-items: center;
  color: $color-white;
  font-family: $typography-paragraph-small-font-family;
  font-weight: $typography-paragraph-small-font-weight;
  font-size: $typography-paragraph-small-font-size;
  line-height: $typography-paragraph-small-line-height;
  letter-spacing: $typography-paragraph-small-letter-spacing;
  max-width: 230px;

  .adminVariant & {
    color: $color-purple-800;
  }

  @include ca-margin($start: calc(#{$ca-grid} / 2));

  @include title-block-under-1366 {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: none;
    margin: ($ca-grid / 5) 0;
  }
}

.subtitleText {
  @include title-block-under-1366 {
    max-width: 42vw;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }

  @include title-block-small {
    max-width: 88vw;
  }
}

.sectionTitleContainer {
  display: flex;
  align-items: center;
  padding: ($ca-grid * 3/4) 0;
}

.sectionTitleInner {
  display: flex;
  flex-direction: column;
}
/* ... */

